[package]
name = "transaction_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.7"
tokio = {version = "1.28.1", features = ["full"]}
eyre = "0.3"
futures = "0.3.28"
sqlx = {version="0.6.3", features=["runtime-tokio-rustls","postgres"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs="0.0.5"
web3="0.18.0"
ethcontract = "0.23.2"
reqwest="0.11.18"