[package]
name = "new_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3="0.18.0"
ethers = "2.0.7"
tokio = {version = "1.28.1", features = ["full"]}
futures = "0.3.28"
ethcontract = "0.23.2"
eyre = "0.3"
sqlx = {version="0.6.3", features=["runtime-tokio-rustls","postgres"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4.3"
reqwest="0.11.18"
